2010-02-22      Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed bug #2926077 using code
	from previous comit in trunk

2010-02-19  SAncho Lernea <slerena@artica.es>

	* pandora_server.spec: Updated revision.
	
	* lib/PandoraFMS/Config.pm: Updated build

	* lib/PandoraFMS/Core.pm: Fixed problem due the merge with 3.1 repo.

2010-02-19  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server/lib/PandoraFMS/Core.pm: Enabled FF protection for
	  module status (not just events). Needs testing.

2010-02-10  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Very important upgrade to this script. Now will
	delete all huge tables (tagente_datos, tagente_datos_string and 
	tagent_acccess) using several independent blocks (by default 100) avoiding
	mysql locks which happen in the past. 

2010-02-02  Sancho Lerena <slerena@artica.es>

	* pandora_server/lib/PandoraFMS/Core.pm: Fixed bug #2940411

2009-12-29  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed problem generating events with 
	character ' that makes SQL queries in console to fail.

	* util/plugin/webcheck_plugin.sh: Christmas extra :-). Plugin
	to check WEB content change (by MD5 stamp).

2009-12-28  Sancho Lerena <slerena@artica.es>

	* lib/Config.pm: pandora_exec default at /usr/bin

	* util/pandora_logrotate: Optimized logrotate setup.

	* pandora_server.spec: Start tentacle after install breaks the
	Upgrade process on RPM (error if already running).

	* util/pandora_server: Added mysql as "should-start" in LSB tags

2009-12-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
          lib/PandoraFMS/ReconServer.pm,
          lib/PandoraFMS/DataServer.pm: Use agent provided interval for agent
          auto creation. The default interval was being used instead.

2009-12-23  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed some typos in planned downtime subroutine.
