@@ -2,7 +2,7 @@
 
 # Pandora FMS- http://pandorafms.com
 # ==================================================
-# Copyright (c) 2005-2009 Artica Soluciones Tecnologicas
+# Copyright (c) 2005-2010 Artica Soluciones Tecnologicas
 # Please see http:#pandorafms.org for full contribution list
 
 # This program is free software; you can redistribute it and/or
@@ -14,7 +14,7 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 
-pandora_console_version="3.0.0"
+pandora_console_version="3.0.1"
 
 echo "This script to make deb must run as root (because the dh-make-perl need this). Then test if you are root."
 if [ `id -u` != 0 ]
