@@ -1,13 +1,19 @@
-2010-02-22      Pablo de la Concepción <pablo.concepcion@artica.es>
+2010-02-23  Raul Mateos  <raulofpandora@gmail.com>
+
+	* lib/PandoraFMS/Config.pm: Fixed date.
+
+	* DEBIAN/make_deb_package.sh, pandora_server_installer: Updated build.
+
+2010-02-22  Pablo de la Concepción <pablo.concepcion@artica.es>
 
 	* lib/PandoraFMS/DataServer.pm: Fixed bug #2926077 using code
 	from previous comit in trunk
 
-2010-02-19  SAncho Lernea <slerena@artica.es>
+2010-02-19  Sancho Lerena <slerena@artica.es>
 
 	* pandora_server.spec: Updated revision.
 	
-	* lib/PandoraFMS/Config.pm: Updated build
+	* lib/PandoraFMS/Config.pm: Updated build.
 
 	* lib/PandoraFMS/Core.pm: Fixed problem due the merge with 3.1 repo.
 
